<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize" />

        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="48dp"
            android:fillViewport="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txtAmount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="@string/hint_amount"
                        android:inputType="numberDecimal"
                        android:textColor="@android:color/black"
                        android:textSize="14pt" />

                </android.support.design.widget.TextInputLayout>

                <RadioGroup
                    android:id="@+id/radioType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:checkedButton="@+id/radioCredit"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioCredit"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/text_credit"
                        android:textSize="7pt" />

                    <RadioButton
                        android:id="@+id/radioDebit"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/text_debit"
                        android:textSize="7pt" />

                </RadioGroup>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/reasonList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:overScrollMode="never"
                    android:padding="8dp" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txtComment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="@string/hint_comment"
                        android:inputType="textMultiLine|textNoSuggestions|textCapSentences"
                        android:maxHeight="64dp"
                        android:maxLines="10"
                        android:textColor="@android:color/black"
                        android:textSize="8pt" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@android:color/white"
            android:gravity="end"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/text_cancel"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/text_save"
                android:textColor="@color/colorAccent" />

        </LinearLayout>

    </android.support.design.widget.CoordinatorLayout>

</layout>